--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
@@ -12,7 +12,14 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
+    "@polkadot-api/descriptors": "file:.papi/descriptors",
+    "@polkadot/api": "^14.0.1",
+    "@reactive-dot/react": "^0.16.2",
+    "@reactive-dot/wallet-ledger": "^0.16.3",
+    "@reactive-dot/wallet-walletconnect": "^0.16.0",
     "@unocss/reset": "^0.62.1",
+    "bun": "^1.1.30",
+    "polkadot-api": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
