--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
-    "@polkadot-api/descriptors": "file:.papi/descriptors",
     "@polkadot/api": "^14.0.1",
     "@reactive-dot/react": "^0.16.2",
     "@reactive-dot/wallet-ledger": "^0.16.3",
     "@reactive-dot/wallet-walletconnect": "^0.16.0",
-    "@unocss/reset": "^0.62.1",
-    "bun": "^1.1.30",
     "polkadot-api": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,11 +27,14 @@
     "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@unocss/reset": "^0.62.1",
     "@unocss/preset-attributify": "^0.62.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "bun": "^1.1.30",
     "eslint": "^9.9.0",
     "typescript": "^5.5.4",
     "unocss": "^0.62.1",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "@polkadot-api/descriptors": "file:.papi/descriptors"
   }
 }
