--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "valtio": "^1.13.2"
+    "valtio": "^1.13.2",
+    "web": "link:polkadot-api/ws-provider/web"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.25.1",
