--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,33 @@
-node_modules
-.*
-.pnpm-store
+.gitignore
 Dodkerfile
 **.Dodkerfile
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.pnpm-store
+node_modules
+.env
