--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify/react": "^5.0.2",
     "@polkadot-api/descriptors": "file:.papi/descriptors",
     "@polkadot/api": "^14.0.1",
+    "@reactive-dot/core": "^0.16.5",
     "@reactive-dot/react": "^0.16.2",
     "@reactive-dot/wallet-ledger": "^0.16.3",
     "@reactive-dot/wallet-walletconnect": "^0.16.0",
@@ -23,8 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "valtio": "^1.13.2",
-    "web": "link:polkadot-api/ws-provider/web"
+    "valtio": "^1.13.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.25.1",
