--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactease",
+  "name": "w3reg-www",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,33 +8,42 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "postinstall": "bunx papi"
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
+    "@polkadot-api/descriptors": "file:.papi/descriptors",
+    "@polkadot-api/metadata-builders": "^0.8.2",
+    "@polkadot-api/substrate-bindings": "^0.9.2",
+    "@polkadot-api/utils": "^0.1.2",
     "@polkadot/api": "^14.0.1",
-    "@reactive-dot/react": "^0.16.2",
-    "@reactive-dot/wallet-ledger": "^0.16.3",
-    "@reactive-dot/wallet-walletconnect": "^0.16.0",
-    "polkadot-api": "^1.4.1",
+    "@reactive-dot/core": "^0.16.5",
+    "@reactive-dot/react": "^0.16.5",
+    "@reactive-dot/utils": "^0.8.1",
+    "@reactive-dot/wallet-ledger": "^0.16.5",
+    "@reactive-dot/wallet-walletconnect": "^0.16.5",
+    "@unocss/reset": "^0.63.4",
+    "bun": "^1.1.30",
+    "lit-html": "^3.2.1",
+    "polkadot-api": "^1.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "valtio": "^1.13.2"
+    "react-router-dom": "^6.27.0",
+    "rxjs": "^7.8.1",
+    "valtio": "^2.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.25.1",
-    "@types/node": "^22.3.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@unocss/reset": "^0.62.1",
-    "@unocss/preset-attributify": "^0.62.1",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "bun": "^1.1.30",
-    "eslint": "^9.9.0",
-    "typescript": "^5.5.4",
-    "unocss": "^0.62.1",
-    "vite": "^5.4.0",
-    "@polkadot-api/descriptors": "file:.papi/descriptors"
-  }
+    "@antfu/eslint-config": "^3.7.3",
+    "@types/node": "^22.7.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@unocss/preset-attributify": "^0.63.4",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "eslint": "^9.12.0",
+    "typescript": "^5.6.3",
+    "unocss": "^0.63.4",
+    "vite": "^5.4.8"
+  },
+  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
 }
