--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
 VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
-VITE_APP_DEFAULT_WS_URL=ws://localhost:41855
-
+VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
