Added default relay WebSockert URL

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
 VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
+VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
