--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
 VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
 VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
+
+VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=19
+VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
+VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
+VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
+
