Added default chain env var

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
 VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
 VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
 
+# Optional
+VITE_APP_DEFAULT_CHAIN=people-rococo
