--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@reactive-dot/wallet-ledger": "^0.16.5",
     "@reactive-dot/wallet-walletconnect": "^0.16.5",
     "@unocss/reset": "^0.63.4",
+    "bignumber.js": "^9.1.2",
     "bun": "^1.1.30",
     "dot-connect": "^0.11.0",
     "dot-identicon": "^0.1.0",
