--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@ VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
 VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
 VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
 
+VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/rococo
+
 # Optional
 VITE_APP_DEFAULT_CHAIN=people-rococo
