--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "@types/react-dom": "^18.3.1",
     "@unocss/preset-attributify": "^0.63.4",
     "@vitejs/plugin-react-swc": "^3.7.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "unocss": "^0.63.4",
     "vite": "^5.4.8"
