--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@polkadot-api/substrate-bindings": "^0.9.2",
     "@polkadot-api/utils": "^0.1.2",
     "@polkadot/api": "^14.0.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@reactive-dot/core": "^0.16.5",
     "@reactive-dot/react": "^0.16.5",
     "@reactive-dot/utils": "^0.8.1",
@@ -27,14 +32,19 @@
     "@unocss/reset": "^0.63.4",
     "bignumber.js": "^9.1.2",
     "bun": "^1.1.30",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dot-connect": "^0.11.0",
     "dot-identicon": "^0.1.0",
     "lit-html": "^3.2.1",
+    "lucide-react": "^0.456.0",
     "polkadot-api": "^1.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "rxjs": "^7.8.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "unicorn-magic": "0.1.0",
     "valtio": "^2.0.0"
   },
