--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
 
     "baseUrl": ".",
     "paths": {
-        "~/*": ["src/*"]
+        "~/*": ["src/*"],
+        "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
