Enhanced Balance Display, User Interface Refinements, and Code Optimization (#17)
* Initial code for creating chains

* Initial Handling form submission

* Using `Utilities, batch_all`

* Getting call estimated costs

* Added `identity.requestJudgement` clas

* Initial balance tracking

* Initial existential deposit querying

* Added Identity hasher

* Fixed balance interval to be triggered only once on every elapsed period

* Lading of all props and methods from account

* Renamed files

* Added identity encoder

* Account public key decoding, as well as of fields and `IdentityInfo` Blake2 bash

* Timer back by a ref

* Removed useless code

* New using blake3 256 bits

* Moved odentitiOf buffer into hook

* Changed hook name

* Hash encoded to hexstring for console representation

* Adapting identity encoding hood to work with a passed-in identity objectg

- Removed already present logic foridentity decoding

* Removed unused code

* Logging inly in degug environment

* Moved ifentity deciging logging where it belongs

* Logging only in degug environment

* Removed unused code

* `useIdentityEncoder now takes identity data as direct aprameter.`

* Generatedn hash from on chaid id data

* Removed unused code

* Fixed potential infinite loop on IDs potentially being different

* Spelling correction

* compairng on chain hash iwth form hash

* Spelling correction

* mv hasher into hooks

* fix mistakenous naming

* Added type info

* Added registrar indexes

* Added registrar indexes

* Requesting judgement if identity hash matches that of parachain.

* Gathering if chain decimals and symbol

* Made async hathering of balance.

* Removed unused code

* Separated hooks for getting basic chain info

* Added default chain env var

* Refactored  to include chain decimals and symbol, as well as dynamic chain selection

* Added BigNumber.js

* Refactored  to include chain decimals a

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
 VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
 VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
+
+VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=19
+VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
+VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
+VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
+
+VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/rococo
+
+# Optional
+VITE_APP_DEFAULT_CHAIN=people-rococo
