--- a/package.json
+++ b/package.json
@@ -50,16 +50,20 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.7.3",
+    "@eslint/js": "^9.15.0",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@unocss/preset-attributify": "^0.63.4",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.12.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0",
     "unocss": "^0.63.4",
     "vite": "^5.4.8"
   },
