--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "postinstall": "bunx papi update"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
