--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -39,7 +39,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
-          docker compose up -d --rm web
+          docker compose up -d web
           docker compose cp web:/app/dist ./dist
           docker compose down
       
