--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -41,6 +41,7 @@ jobs:
 
           echo ${{ secrets.VITE_BUILD_ENV }} > .env
           docker compose up -d web
+          docker compose exec web ls /app
           docker compose cp web:/app/dist ./dist
           docker compose down
       
