--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -41,6 +41,7 @@ jobs:
           sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
           echo ${{ secrets.VITE_BUILD_ENV }} > .env
+          echo BUILD_TARGET=${{ env.BUILD_TARGET }} docker compose up -d web
           BUILD_TARGET=${{ env.BUILD_TARGET }} docker compose up -d web
           docker compose exec web ls /app/dist
           docker compose cp web:dist ./dist
