--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -43,7 +43,7 @@ jobs:
           echo ${{ secrets.VITE_BUILD_ENV }} > .env
           echo BUILD_TARGET=${{ env.BUILD_TARGET }} docker compose up -d web
           BUILD_TARGET=${{ env.BUILD_TARGET }} docker compose up -d web
-          sleep 10
+          docker compose exec web find / -name dist 2>/dev/null
           docker compose exec web ls /app/dist
           docker compose cp web:/app/dist ./dist
           docker compose down
