--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -57,9 +57,7 @@ jobs:
           scp -o "StrictHostKeyChecking no" -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/dist
           ssh -o "StrictHostKeyChecking no" ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
             cd ${{ env.DEPLOY_PATH }}/w3registrar-www
-            screen --list
-            ls dist
-            killall screen
+            pkill -f "bunx serve --single dist"
             screen -d -m bunx serve --single dist
           EOF
 
