--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -27,6 +27,7 @@ jobs:
         run: |
           curl -fsSL https://bun.sh/install | bash -s "bun-canary"
           echo ${{ secrets.VITE_BUILD_ENV }} > .env
+          bash scripts/build.sh
           echo BUILD_TARGET=${{ env.BUILD_TARGET }} docker compose up -d web
           BUILD_TARGET=${{ env.BUILD_TARGET }} docker compose up -d web
           docker compose cp web:/app/dist ./dist
