--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -29,7 +29,7 @@ jobs:
           export BUN_INSTALL="$HOME/.bun"
           export PATH=$BUN_INSTALL/bin:$PATH
           echo ${{ secrets.VITE_BUILD_ENV }} > .env
-          scripts/build.sh
+          bash scripts/build.sh
       
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.3
