--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -24,11 +24,12 @@ jobs:
       - name: Build the Vite app
         env:
           BUILD_TARGET: 'production'
+          VITE_BUILD_ENV: ${{ secrets.VITE_BUILD_ENV }}
         run: |
           curl -fsSL https://bun.sh/install | bash -s "canary"
           export BUN_INSTALL="$HOME/.bun"
           export PATH=$BUN_INSTALL/bin:$PATH
-          echo ${{ secrets.VITE_BUILD_ENV }} > .env
+          echo ${VITE_BUILD_ENV} > .env
           cat .env | wc -l
           bash scripts/build.sh
       
