Cleaning up to install fresh build tiles

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
             set -euo pipefail
-            docker compose -f ${{ env.DEPLOY_PATH }}/w3registrar-www/dock -compose.yaml down
+            docker compose -f ${{ env.DEPLOY_PATH }}/w3registrar-www/docker-compose.yaml down
             rm -fr ${{ env.DEPLOY_PATH }}/w3registrar-www
             mkdir -p ${{ env.DEPLOY_PATH }}/w3registrar-www
           EOF
