--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,6 @@ server {
   server_name frontend;
   location / {
     root /app;
-    try_files $uri /index.html;   // Allows virtual routes to be redirected to React app.
+    try_files $uri /index.html;   # Allows virtual routes to be redirected to React app.
   }
 }
