--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,8 @@ services:
     ports:
       - "${PORT:-3000}:3000"
   web-nginx:
-    image: nginxinc/nginx-unprivileged
+    build: ./nginx
     ports:
       - 127.0.0.1:63999:80
     restart: unless-stopped
     user: 1000:1000
-    volumes:
-      - ./dist/:/app:ro
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
