--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
   listen 80;
   server_name frontend;
   location / {
-    root /app;
+    root /usr/share/nginx/html;
     try_files $uri /index.html;   # Allows virtual routes to be redirected to React app.
   }
 }
