UI Refactor and CI/CD Pipeline Setup (#18)
* Removed unnecessary code

* Removed unnecessary code

* Overhaul of main app state types

* Added proper alert props typing

* Added proper alert props typing

* Reviewed type information

* Logging only in development

* Shown challenges

* Showing challenges for verification

* Removed redundant WebSocket code

* Misc refactoring to keep code in screen area

* Showing challenges for verification

* Showing challenges for verification

* Removed demo component

* Changed hook  returnned requestVerificationSecret,

* Initially added _New challenge_ button

* Changed response typings

* Mode Identity Websocket logic into Challenge verifying screen

* Moved Challenges Websocket logic into Challenge verifying screen

* Added challenges WebSocket callbacks

* Update verify state on notification

* IdentChallenges an be diimed as verified.

* Updated challenge data on request

* Added susense so app wouldn't crash on switching parachain

* Initial v0 config for new UI

* Initial v0 config for new UI

* Removed Yarn lockfile

* Added packages for v0

* Added v0 template

* Corrected type errors

* v0 config for new UI

* Initial V0 interface redesign

* Misc code reorg

* Corrected type errors

* Misc indentation

* Added placeholder success stiles

* Renamed type

* Renamed type

* Refactoured usage of timeouts and interval, reviewed types

* Reviewed type info

* Removed unnecessarty parameter

* Refactoreing app state into stores

* Added functionality to change WebSocket URL

* Basic component structure refactoring

* COrrected types

* Rearranged imports

* Removed unnecessary code

* Moved config creation inode

* Removed unnecessary code

* Removed unnecessary code

* Refactored to init config  via effects

* Type info

* Removed unnecessary code

* Added Home component wrapper

* Network and API Enhancements (#13)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,14 +4,11 @@ services:
       context: .
       dockerfile: Dockerfile
       target: ${BUILD_TARGET:-development}
-    environment:
-      - NODE_ENV=${NODE_ENV:-development}
-      - VITE_APP_WALLET_CONNECT_PROJECT_ID=${VITE_APP_WALLET_CONNECT_PROJECT_ID}
-      - VITE_APP_DEFAULT_WS_URL=${VITE_APP_DEFAULT_WS_URL}
+    container_name: web
     ports:
       - "${PORT:-3000}:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
-    env_file:
-      - .env
+  web-nginx:
+    build: ./nginx
+    ports:
+      - 127.0.0.1:63999:80
+    restart: unless-stopped
