--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -6,6 +6,7 @@ env:
   SERVER_USER: 'w3reg'
   SERVER_IP: '135.181.202.179'
   DEPLOY_PATH: '/home/w3reg/dev.w3reg.org'
+  BUILD_TARGET: 'production'
 
 on:
   pull_request:
@@ -14,36 +15,24 @@ on:
   push:
     branches:
       - main
-
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    environment: production
-    continue-on-error: true
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      # - name: Set up Node.js
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: ${{ env.NODE_VERSION }}
-
-      # - name: Install dependencies
-      #   run: yarn install
-      #
-      # - name: Build for w3registrar-www
-      #   env:
-      #     VITE_PROJECT: w3registrar-www
-      #     # VITE_APP_WALLET_CONNECT_PROJECT_ID: ${{ secrets.VITE_APP_WALLET_CONNECT_PROJECT_ID }}
-      #     # VITE_APP_DEFAULT_WS_URL: ${{ secrets.VITE_APP_DEFAULT_WS_URL }}
-      #   run: |
-      #     cp .env.example .env
-      #     # echo "VITE_APP_WALLET_CONNECT_PROJECT_ID=$VITE_APP_WALLET_CONNECT_PROJECT_ID" >> .env
-      #     # echo "VITE_APP_DEFAULT_WS_URL=$VITE_APP_DEFAULT_WS_URL" >> .env
-      #     yarn buildpub:w3registrar-www
-      #     mv dist dist-w3registrar-www
-
+      - uses: actions/checkout@v3
+      
+      - name: Build the Vite app
+        env:
+          BUILD_TARGET: 'production'
+          VITE_BUILD_ENV: ${{ secrets.VITE_BUILD_ENV }}
+        run: |
+          curl -fsSL https://bun.sh/install | bash -s "canary"
+          export BUN_INSTALL="$HOME/.bun"
+          export PATH=$BUN_INSTALL/bin:$PATH
+          echo -e ${VITE_BUILD_ENV} > .env
+          cat .env | wc -l
+          bash scripts/build.sh
+      
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.3
         with:
@@ -55,8 +44,23 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} "mkdir -p ${{ env.DEPLOY_PATH }}/w3registrar-www"
-          scp -r ./* ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www
-          scp -r ./.env.example ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/.env
-          scp -r ./.papi ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/.papi
-          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} "cd ${{ env.DEPLOY_PATH }}/w3registrar-www && docker compose -f docker-compose.yaml up -d"
+          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
+            set -euo pipefail
+            rm -fr ${{ env.DEPLOY_PATH }}/w3registrar-www/nginx || true
+            mkdir -p ${{ env.DEPLOY_PATH }}/w3registrar-www
+          EOF
+          scp -r ./nginx ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www
+          scp -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/nginx
+          scp docker-compose.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www
+          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
+            set -euo pipefail
+            cd ${{ env.DEPLOY_PATH }}/w3registrar-www
+            docker compose up -d web-nginx
+          EOF
+
+#jobs:
+#  build-and-deploy:
+#    runs-on: ubuntu-latest
+#    environment: production
+#    continue-on-error: true
+#    steps:
