--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -24,12 +24,11 @@ jobs:
       - name: Build the Vite app
         env:
           BUILD_TARGET: 'production'
-          VITE_BUILD_ENV: ${{ secrets.VITE_BUILD_ENV }}
         run: |
           curl -fsSL https://bun.sh/install | bash -s "canary"
           export BUN_INSTALL="$HOME/.bun"
           export PATH=$BUN_INSTALL/bin:$PATH
-          echo -e ${VITE_BUILD_ENV} > .env
+          cat .env.example | grep -v "#" > .env
           cat .env | wc -l
           bash scripts/build.sh
       
@@ -55,12 +54,5 @@ jobs:
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
             set -euo pipefail
             cd ${{ env.DEPLOY_PATH }}/w3registrar-www
-            docker compose up -d web-nginx
+            docker compose up --build -d web-nginx
           EOF
-
-#jobs:
-#  build-and-deploy:
-#    runs-on: ubuntu-latest
-#    environment: production
-#    continue-on-error: true
-#    steps:
