--- a/package.json
+++ b/package.json
@@ -23,21 +23,20 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@reactive-dot/core": "^0.16.5",
-    "@reactive-dot/react": "^0.16.5",
+    "@reactive-dot/react": "^0.27.2",
     "@reactive-dot/utils": "^0.8.1",
-    "@reactive-dot/wallet-ledger": "^0.16.5",
-    "@reactive-dot/wallet-walletconnect": "^0.16.5",
+    "@reactive-dot/wallet-ledger": "^0.16.20",
+    "@reactive-dot/wallet-walletconnect": "^0.16.20",
     "@unocss/reset": "^0.63.4",
     "bignumber.js": "^9.1.2",
     "bun": "^1.1.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dot-connect": "^0.11.0",
+    "dot-connect": "^0.13.2",
     "dot-identicon": "^0.1.0",
     "lit-html": "^3.2.1",
     "lucide-react": "^0.456.0",
-    "polkadot-api": "^1.6.1",
+    "polkadot-api": "1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
