--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
 VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=19
 VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
 VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
+VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=16
 VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
 
 VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
