--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
 
 VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
 
+VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people,rococo_people
+
 # Optional
 VITE_APP_DEFAULT_CHAIN=rococo_people
