Fixed connection definitions and loading component (#25)
* Updated header to show installed nets and user accounts from Polkadot JS

* Ensuring DOcker image actually gets rebuilt

* Copying .env.example instead of needing env env var

* Updated metadata

* Improved Header and Deployment Workflow (#19)

* Updated header to show installed nets and user accounts from Polkadot JS

* Ensuring DOcker image actually gets rebuilt

* Copying .env.example instead of needing env env var

* Updated metadata

* Added directions on versions to have, and on .env file.

---------

Co-authored-by: antonini44354 <antonini44354@gmail,com>

* Added confirmation dialog

* Removed redundant code

* Fixed main dialog close

* Improved error handling on challenges fetching

* Considered all validations passsed when diven positive judgement

* Added Identity lear warning dialog

* Removed button, as identity deletion clearing judgements as well

* Moved disconecting logiv behind dialog

* Refactored into one liner

* Removed generic notification button

* Removed redundant code

* Disabling tabs on load on  lacking identity info

* Revanped event management via priority queue

* Improved WebSocket connection logic to clean up properly on lcose

* Prevented potential crash when  no identity info os available.

* Ensuring to set ID info null for accounts that don't have it set

* Moved ID status info below every tab

* Ensuring to show challenges tabs only on fee being paid

* Reviewed imports

* Fixed to return object instead of array

* Added logging

* Passing doen chain constants

* Cleaned up imports

* Added cost estimation to dialogs

* Reviewed imports

* Added type info for action type

* Misc deleting unnecessary spaces

* Fixed to hide all transactions elements for dalogs that wont have them

* Added cost estimation for identityclearing extrinsic

* Revanped challenges WebSocket logic to improve API c

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,12 @@ VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
 VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=19
 VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
 VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
+VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=16
 VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
 
 VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
 
+VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people,rococo_people
+
 # Optional
-VITE_APP_DEFAULT_CHAIN=people_rococo
+VITE_APP_DEFAULT_CHAIN=rococo_people
