--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
@@ -18,25 +21,29 @@
     "@polkadot-api/substrate-bindings": "^0.9.4",
     "@polkadot-api/utils": "^0.1.2",
     "@polkadot/api": "^14.3.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.3",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "@reactive-dot/react": "^0.27.2",
     "@reactive-dot/utils": "^0.8.1",
     "@reactive-dot/wallet-ledger": "^0.16.20",
-    "@reactive-dot/wallet-walletconnect": "^0.16.20",
+    "@reactive-dot/wallet-walletconnect": "^0.17.0",
     "@unocss/reset": "^0.63.4",
     "bignumber.js": "^9.1.2",
     "bun": "^1.1.38",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "dot-connect": "^0.13.2",
     "dot-identicon": "^0.1.0",
     "lit-html": "^3.2.1",
     "lucide-react": "^0.456.0",
-    "polkadot-api": "1.7.7",
+    "polkadot-api": "1.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
