--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "unocss": "^0.63.4",
     "vite": "^5.4.11"
   },
-  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
+  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39",
+  "patchedDependencies": {
+    "@reactive-dot/core@0.27.1": "patches/@reactive-dot%2Fcore@0.27.1.patch"
+  }
 }
