--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@polkadot-api/substrate-bindings": "^0.9.4",
     "@polkadot-api/utils": "^0.1.2",
     "@polkadot/api": "^14.3.1",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.3",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
@@ -72,5 +74,9 @@
     "unocss": "^0.63.4",
     "vite": "^5.4.11"
   },
-  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39"
+  "packageManager": "yarn@4.5.0+sha512.837566d24eec14ec0f5f1411adb544e892b3454255e61fdef8fd05f3429480102806bac7446bc9daff3896b01ae4b62d00096c7e989f1596f2af10b927532f39",
+  "patchedDependencies": {
+    "@reactive-dot/core@0.27.1": "patches/@reactive-dot%2Fcore@0.27.1.patch",
+    "css-tree@3.0.0": "patches/css-tree@3.0.0.patch"
+  }
 }
