--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -5,7 +5,7 @@ env:
   SERVER_IP: '135.181.202.179'
   DEPLOY_PATH: '/home/w3reg/app.w3reg.org'
   BACKUP_PATH: '/home/w3reg/backups'
-  STAGING_PATH: '/home/w3reg/prod.w3reg.org'
+  STAGING_PATH: '/home/w3reg/staging.w3reg.org'
 
 on:
   workflow_dispatch:
@@ -21,7 +21,9 @@ jobs:
 
       - name: Add SSH Key to Known Hosts
         run: |
-          echo "$(ssh-keyscan -t rsa ${{ env.SERVER_IP }} 2>/dev/null)" >> ~/.ssh/known_hosts
+          mkdir -p ~/.ssh
+          ssh-keyscan -t ed25519 ${{ env.SERVER_IP }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Deploy using rsync with backup
         run: |
