--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -5,7 +5,7 @@ env:
   GCP_PROJECT_ID: 'rbl-common'
   SERVER_USER: 'w3reg'
   SERVER_IP: '135.181.202.179'
-  DEPLOY_PATH: '/home/w3reg/prod.w3reg.org'
+  DEPLOY_PATH: '/home/w3reg/app.w3reg.org'
   BUILD_TARGET: 'production'
 
 on:
@@ -36,7 +36,9 @@ jobs:
 
       - name: Add SSH Key to Known Hosts
         run: |
-          echo "$(ssh-keyscan -t rsa ${{ env.SERVER_IP }} 2>/prod/null)" >> ~/.ssh/known_hosts
+          mkdir -p ~/.ssh
+          ssh-keyscan -t ed25519 ${{ env.SERVER_IP }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Deploy to server
         run: |
