--- a/.github/workflows/rollback.yaml
+++ b/.github/workflows/rollback.yaml
@@ -20,7 +20,9 @@ jobs:
 
       - name: Add SSH Key to Known Hosts
         run: |
-          echo "$(ssh-keyscan -t rsa ${{ env.SERVER_IP }} 2>/dev/null)" >> ~/.ssh/known_hosts
+          mkdir -p ~/.ssh
+          ssh-keyscan -t ed25519 ${{ env.SERVER_IP }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Rollback to Previous Deployment
         run: |
